--- a/flex-model-css.css
+++ b/flex-model-css.css
@@ -1,10 +1,12 @@
 * 
 {
-  display: block; 
+  justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 :root {
   text-align: center; 
   font-size: 19px;
+
 }
 
 h1 {
@@ -14,81 +16,65 @@ h1 {
   }
 
   h2 {
-  font-size: 1.5em;
+  font-size: 1.3em;
   margin: 10px;
   }
 
 .ovner-block { 
   display: flex;  
-  justify-content: center;
   margin: 0 auto;
   width: auto;
   min-height: 450px;
-  /* border: 5px solid red; */
   background: #333
   url("https://static.pexels.com/photos/248515/pexels-photo-248515.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 450px;
   opacity: 0.8;
 }
 
 .inner-block {
   padding: 10px;
-  /* border: 5px solid green; */
   width: 900px;
-  height: 250px;
   color: white;
 }
 
 .flex-container1 {
  display: flex;  
- justify-content: center;
  align-items: center;
 }
 
 .inner-main {
   padding: 10px;
-  /* border: 5px solid blue; */
   width: 900px;
-  height: 250px;
   color: black;
 }
 
 .flex-container2 {
   display: flex;  
-  justify-content: center;
   align-items: center;
   width: 100%;
-  height: 300px;
-  /* border: 5px solid rgb(250, 10, 158); */
   margin: 0px;
  }
 
  .flex-container2 {
   display: flex;  
-  justify-content: center;
   align-items: center;
   color: black;
  }
 
  .section-b {
-  position: center;
-  flex-direction: row;
+  align-items: stretch;
   background: #333333;
   width: 100%;
-  height: 517px;
-  margin: 0 auto;
-  /* border: 5px solid rgb(6, 243, 144); */
  }
+
  .card {
   background: #FFFFFF;
   width: 272px;
-  height: 420px;
+  padding: 0 0 10px;
   margin: 10px;
-  /* border: 5px solid yellow; */
  }
 
  img {
@@ -105,7 +91,6 @@ h1 {
   margin: 0;
   padding: 35px 17px 17px;
   display: flex;
-  justify-content: center;
  }
  
  .card-title {
@@ -114,50 +99,38 @@ h1 {
 
 .section-c {
   display: flex;  
-  justify-content: center;
   align-items: center;
-  /* border: 5px solid blue; */
   width: 100%;
-  height: 250px;
   color: black;
-  padding: 10px;
+  padding: 0px;
 }
 
 .content-wrap {
   padding: 10px;
-  /* border: 5px solid blue; */
   width: 800px;
-  height: 180px;
   color: black;
   position: center;
 }
 
 .section-d {
   display: flex;
-  justify-content: center;
   align-items: center;
   width: 100%;
-  height: 250px;
   margin: 0 auto;
-  /* border: 5px solid rgb(6, 243, 144);  */
   color: white;
 }
 
 .box1 {
   width: 50%;
-  height: 200px;
   padding: 20px;
   position: center;
-  /* border: 5px solid blue; */
   background: #2690D4;
 }
 
 .box2 {
   width: 50%;
-  height: 200px;
   padding: 20px;
   position: center;
-  /* border: 5px solid yellow; */
   background:#333333
 }
 
@@ -168,17 +141,14 @@ h1 {
   height: 100px;
   background: #000000;
   color: white;
-  /* border: 5px solid red;  */
   align-items: center;
 }
 
 .footer1{
-  justify-content: center;
   width: 50%;
 }
 
 .footer2{
-  justify-content: center;
   width: 50%;  
 }
 
@@ -188,5 +158,6 @@ a {
 }
 
 p{
-  padding: 20px;
+  padding: 10px;
+  margin: 0 auto;
 }
